app-color-card.css
:host {
  font-family: sans-serif;
  display:block;
}
#card{
  padding:10px 0px;
  position:relative;
  overflow:hidden;
  height:110px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
}

#card i{
  font-size:110px;
  position:absolute;
  left:-20px;
  z-index:1;
  -webkit-transition: left 0.5s ease; /* For Safari 3.1 to 6.0 */
  transition: left 0.5s ease;
}

#card:hover i{
  left:-10px;
}

#card h4{
  display:block;
  font-size:40px;
  float:right;
  text-align:right;
  color:#fff;
  position:relative;
  margin-top:0px;
  margin-bottom:0px;
  margin-right:15px;
  z-index:2;
}

#card p{
  float:right;
  color:#fff;
  margin:0px;
  font-size:12px;
  margin-right:15px;
}

a#view_more{
  background:#333;
  background:rgba(0, 0, 0, 0.2);
  bottom:0px;
  left:0px;
  width:98%;
  color:#fff;
  display:block;
  position:absolute;
  font-size:11px;
  padding-left:2%;
  padding-top:5px;
  padding-bottom:5px;
  text-transform:uppercase;
  z-index:3;
  text-decoration:none;
  -webkit-transition: background 0.5s ease; /* For Safari 3.1 to 6.0 */
  transition: background 0.5s ease;
}

a#view_more span{
  display:block;
  float:left;
}

a#view_more:hover{
  background:rgba(0, 0, 0, 0.34); 
}

a#view_more.hidden{
  display:none;
}

#card a#view_more i{
  font-size:12px;
  float:right;
  position:relative;
  left:-8px;
}

